Remove height:100vh from body to solve problem of visible url bar in mobile viewport

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -6,7 +6,7 @@
 
 body {
     width: 100%;
-    height: 100vh;
+    /* height: 100vh; */
     background-image: url('../images/coins.png');
     background-size: cover;
     background-position: center center;
